Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: 10.2.5
-
Component/s: Storage Engine - InnoDB
-
Labels:None
Description
On server bootstrap with default options, InnoDB produces the warnings
2017-01-23 1:49:05 140688075253632 [Warning] InnoDB: New log files created, LSN=45892
|
2017-01-23 1:49:06 140688075253632 [Warning] InnoDB: Creating foreign key constraint system tables.
|
It's bootstrap, naturally InnoDB creates new files and system tables, there should be no warnings of this kind.
Attachments
Issue Links
- includes
-
MDEV-11782 Redefine the innodb_encrypt_log format
-
- Closed
-